# SNACKAI-CoCo-BeyondthePrompt

./: .gitignore  README.md  app.py  build_pptx.py  manage.sh  pyproject.toml  runx.sh  validate.py
tests/: conftest.py  test_app.py
